    public (Karthik Kambatla via Sandy Ryza)

    HADOOP-9918. Add addIfService to CompositeService (Karthik Kambatla via
    Sandy Ryza)

    HADOOP-9945. HAServiceState should have a state for stopped services.
    (Karthik Kambatla via atm)

    HADOOP-9962. in order to avoid dependency divergence within Hadoop itself 
    lets enable DependencyConvergence. (rvs via tucu)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9916. Fix race in ipc.Client retry. (Binglin Chang via llu)

    HADOOP-9768. chown and chgrp reject users and groups with spaces on platforms
    where spaces are otherwise acceptable. (cnauroth)

    HADOOP-9801. Configuration#writeXml uses platform defaulting encoding, which
    may mishandle multi-byte characters. (cnauroth)

    HADOOP-9806 PortmapInterface should check if the procedure is out-of-range
    (brandonli)

    HADOOP-9527. Add symlink support to LocalFileSystem on Windows.
    (Arpit Agarwal via cnauroth)

    HADOOP-9315. Port HADOOP-9249 hadoop-maven-plugins Clover fix to branch-2 to
    fix build failures. (Dennis Y via cnauroth)

    HADOOP-9831. Make checknative shell command accessible on Windows. (cnauroth)

    HADOOP-9675. use svn:eol-style native for html to prevent line ending
    issues (Colin Patrick McCabe)

    HADOOP-9757. Har metadata cache can grow without limit (Cristina Abad via daryn)

    HADOOP-9858. Remove unused private RawLocalFileSystem#execCommand method from
    branch-2. (cnauroth)

    HADOOP-9857. Tests block and sometimes timeout on Windows due to invalid
    entropy source. (cnauroth)

    HADOOP-9381. Document dfs cp -f option. (Keegan Witt, suresh via suresh)

    HADOOP-9868. Server must not advertise kerberos realm. (daryn via kihwal)

    HADOOP-9880. SASL changes from HADOOP-9421 breaks Secure HA NN. (daryn via
    jing9)

    HADOOP-9887. globStatus does not correctly handle paths starting with a drive
    spec on Windows. (Chuan Liu via cnauroth)
